--- a/Modified-Item-Output-inventory-test.ipynb
+++ b/Modified-Item-Output-inventory-test.ipynb
@@ -13,11 +13,32 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (3.7.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (1.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (4.47.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: numpy<2,>=1.20 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (1.23.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\omar7\\appdata\\roaming\\python\\python38\\site-packages (from matplotlib) (23.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (10.2.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (3.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\omar7\\appdata\\roaming\\python\\python38\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\omar7\\onedrive - med.cornell.edu\\documents\\github\\.conda\\lib\\site-packages (from matplotlib) (6.1.1)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\omar7\\appdata\\roaming\\python\\python38\\site-packages (from importlib-resources>=3.2.0->matplotlib) (3.17.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\omar7\\appdata\\roaming\\python\\python38\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "!pip install matplotlib\n"
    ]
   },
   {
